day2 part1 Tailspin

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,8 @@
       "name": "Launch Current File",
       "request": "launch",
       "classPaths": [
-        "/Users/torbjorn.gannholm/tobega/tailspin-v0/tailspin.jar"
+        "/Users/torbjorn.gannholm/tobega/tailspin-v0/tailspin.jar",
+        "/Users/tobe/code/tailspin-v0/tailspin.jar"
       ],
       "mainClass": "tailspin.Tailspin",
       "args": "${file} < input.txt"
