--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,17 @@
       ],
       "mainClass": "tailspin.Tailspin",
       "args": "${file} < input.txt"
+    },
+    {
+      "type": "java",
+      "name": "Test Current File",
+      "request": "launch",
+      "classPaths": [
+        "/Users/torbjorn.gannholm/tobega/tailspin-v0/tailspin.jar",
+        "/Users/tobe/code/tailspin-v0/tailspin.jar"
+      ],
+      "mainClass": "tailspin.Tailspin",
+      "args": "--test ${file} < input.txt"
     }
   ]
 }
