--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,17 @@
     },
     {
       "type": "java",
+      "name": "Example Current File",
+      "request": "launch",
+      "classPaths": [
+        "/Users/torbjorn.gannholm/tobega/tailspin-v0/tailspin.jar",
+        "/Users/tobe/code/tailspin-v0/tailspin.jar"
+      ],
+      "mainClass": "tailspin.Tailspin",
+      "args": "${file} < example.txt"
+    },
+    {
+      "type": "java",
       "name": "Test Current File",
       "request": "launch",
       "classPaths": [
